first website details
added subheaders and text

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>beyteam</title>
+  <title>The BeyHive</title>
 </head>
 <body>
-  <h1>Hi!</h1>
+  <h1>The BeyHive</h1>
+
+  <h2>Welcome to Beyoncé's biggest fanpage!'</h2>
+
+  <h2>About</h2>
+    <p>Here you can learn more about the First Lady of Music,
+      Beyoncé Knowles-Carter, as well as connect with fellow stans!</p>
 </body>
 </html>
