Revert "linked bootstrap and css file"
This reverts commit 01dde481b75c0b3ec829b4ff2a687d67352afe0f.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html>
-<!-- HEADER -->
-  <head>
-    <title>The BeyHive</title>
-    <!-- link Bootstrap -->
-    <link href='css/bootstrap.min.css' rel='stylesheet'>
-    <!-- link CSS file -->
-    <link href='css/main.css' rel='stylesheet'>
-    <!-- make sure website is compatible with mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-<!-- BODY -->
-  <body>
-    <h1>The BeyHive</h1>
+<head>
+  <title>The BeyHive</title>
+</head>
+<body>
+  <h1>The BeyHive</h1>
 
-    <h2>Welcome to the home of all things Beyoncé!'</h2>
+  <h2>Welcome to Beyoncé's biggest fanpage!'</h2>
 
-    <h2>About</h2>
-      <p>Here you can learn more about the First Lady of Music,
-        Beyoncé Knowles-Carter, as well as browse through BeyHive favourites
-        and connect with fellow stans!</p>
-  </body>
-  <!-- END -->
+  <h2>About</h2>
+    <p>Here you can learn more about the First Lady of Music,
+      Beyoncé Knowles-Carter, as well as connect with fellow stans!</p>
+</body>
 </html>
