--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">
-            <!-- <img alt="BeyHive" src="images/bee-logo.png"> -->
+            <img alt="BeyHive" src="images/miniest-bee.png">
           </a>
         </div>
 
