--- a/index.html
+++ b/index.html
@@ -2,135 +2,172 @@
 <html>
 <!-- HEADER -->
   <head>
-    <title>The BeyHive</title>
+    <title>Bey+Hive</title>
     <!-- add Bootstrap -->
     <link href='css/bootstrap.min.css' rel='stylesheet'>
     <!-- add CSS file -->
     <link href='css/main.css' rel='stylesheet'>
     <!-- make sure website is compatible with mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- add jQuery minified and own javascript file -->
     <script
-      src="http://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
+      src='http://code.jquery.com/jquery-3.3.1.min.js'
+      integrity='sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8='
+      crossorigin='anonymous'></script>
     <!-- add bootsrap js -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"></script>
+    <script src='https://code.jquery.com/jquery-3.2.1.slim.min.js'
+      integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN'
+      crossorigin='anonymous'></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js'
+      integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q'
+      crossorigin='anonymous'></script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js'
+      integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl'
+      crossorigin='anonymous'></script>
 
-    <script type="text/javascript" scr="js/custom.js"></script>
+    <script type='text/javascript' scr='js/custom.js'></script>
     <!-- add icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 
   </head>
-<!-- BODY -->
+
+<!----------------------------------------------------------------------------->
+<!----------------------------------------------------------------------------->
+<!----------------------------------------------------------------------------->
+
   <body>
 
-    <!-- NAVIGATION BAR -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
+    <!--- NAVIGATION BAR ------------------------------------------------------>
+    <nav class='navbar navbar-default navbar-fixed-top'>
+
+      <div class='container-fluid'>
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed"
-          data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-          aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+        <div class='navbar-header'>
+          <button type='button' class='navbar-toggle collapsed'
+          data-toggle='collapse' data-target='#bs-example-navbar-collapse-1'
+          aria-expanded='false'>
+            <span class='sr-only'>Toggle navigation</span>
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
           </button>
-          <a class="navbar-brand" href="#">
-            <img alt="BeyHive" src="images/miniest-bee.png">
+          <a class='navbar-brand' href='#'>
+            <img alt='BeyHive' style='max-height: 50px;' src='images/bey-hive-small2.png'>
           </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
+        <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
+          <ul class='nav navbar-nav navbar-right'>
+
             <!-- Beyoncé dropdown -->
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-              role="button" aria-haspopup="true"
-              aria-expanded="false">Beyoncé <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Her Life</a></li>
-                <li><a href="#">Her Releases</a></li>
-                <li><a href="#">Her Performances</a></li>
-                <!-- <li role="separator" class="divider"></li> -->
-                <h6 class="dropdown-header">Her Social Media</h6>
-                <div class="social-icons-navbar">
-                  <a href="#" class="social-icon"> <i class="fa fa-facebook"></i></a>
-                  <a href="#" class="social-icon"> <i class="fa fa-twitter"></i></a>
-                  <a href="#" class="social-icon"> <i class="fa fa-instagram"></i></a>
-                </div>
-                <!-- <li><a href="#">Instagram Facebook Twitter Tumblr</a></li> -->
+            <li class='dropdown'>
+              <a href='#' class='dropdown-toggle' data-toggle='dropdown'
+              role='button' aria-haspopup='true'
+              aria-expanded='false'>BEYONCÉ</a>
+              <ul class='dropdown-menu'>
+                <li><a href='#'>Her Life</a></li>
+                <li><a href='#'>Her Releases</a></li>s
+                <li><a href='#'>Her Performances</a></li>
+                <li><a href='#'>Her Social Media</a></li>
+                <!-- <li role='separator' class='divider'></li> -->
               </ul>
             </li>
+
             <!-- BeyHive dropdown -->
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-              role="button" aria-haspopup="true"
-              aria-expanded="false">BeyHive <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Forums</a></li>
-                <li><a href="#">Fan Art</a></li>
-                <li><a href="#">Fan Merchandise</a></li>
+            <li class='dropdown'>
+              <a href='#' class='dropdown-toggle' data-toggle='dropdown'
+              role='button' aria-haspopup='true'
+              aria-expanded='false'>BEYHIVE</a>
+              <ul class='dropdown-menu'>
+                <li><a href='#'>Forums</a></li>
+                <li><a href='#'>Fan Art</a></li>
+                <li><a href='#'>Fan Merchandise</a></li>
               </ul>
             </li>
+
+            <!-- Listen dropdown -->
+            <li class='dropdown'>
+              <a href='#' class='dropdown-toggle' data-toggle='dropdown'
+              role='button' aria-haspopup='true'
+              aria-expanded='false'>LISTEN</a>
+              <ul class='dropdown-menu'>
+                <li><a href='#'>Albums</a></li>
+                <li><a href='#'>Singles</a></li>
+                <li><a href='#'>Fan Breakdowns</a></li>
+              </ul>
+            </li>
+
             <!-- Watch dropdown -->
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-              role="button" aria-haspopup="true"
-              aria-expanded="false">Watch <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Music Videos</a></li>
-                <li><a href="#">Performances</a></li>
-                <li><a href="#">Fan Videos</a></li>
+            <li class='dropdown'>
+              <a href='#' class='dropdown-toggle data-toggle='dropdown'
+              role='button' aria-haspopup='true'
+              aria-expanded='false'>WATCH</a>
+              <ul class='dropdown-menu'>
+                <li><a href='#'>Music Videos</a></li>
+                <li><a href='#'>Performances</a></li>
+                <li><a href='#'>Fan Videos</a></li>
               </ul>
             </li>
+
             <!-- Shop link -->
-            <li><a href="#">Shop <span class="sr-only">(current)</span></a></li>
-            <!-- <li><a href="#">Link</a></li> etc -->
+            <li><a href='#'>SHOP<span class='sr-only'>(current)</span></a></li>
+            <!-- <li><a href='#'>Link</a></li> etc -->
           </ul>
 
           <!-- Search bar -->
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
+          <!-- <form class='navbar-form navbar-right'>
+            <div class='form-group'>
+              <input type='text' class='form-control' placeholder='Search'>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
+            <button type='submit' class='btn btn-default'>Submit</button>
+          </form> -->
 
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="jumbotron">
+<div class="header"></div>
+
       <div class='container'>
-        <h1 class='text-center'>THE BEYHIVE</h1>
+        <div class='row'>
+          <!--- INTRO BOX ----------------------------------------------------->
+          <div class='intro col-sm-6'>
+            <h2 class='text-center'>WELCOME</h2>
+            <p class='text-center'>Here you can learn more about the First Lady of Music,
+              Beyoncé Knowles-Carter, as well as browse through BeyHive favourites
+              and connect with fellow stans! You can find us on multiple social platforms.</p>
 
-        <h2 class='text-center'>Welcome to the home of all things Beyoncé!</h2>
-          <p class='text-center'>Here you can learn more about the First Lady of Music,
-            Beyoncé Knowles-Carter, as well as browse through BeyHive favourites
-            and connect with fellow stans!</p>
-
-        <p>Follow us on</p>
-          <div class="social-icons">
-                <a href="#" class="social-icon"> <i class="fa fa-facebook"></i></a>
-                <a href="#" class="social-icon"> <i class="fa fa-twitter"></i></a>
-                <a href="#" class="social-icon"> <i class="fa fa-instagram"></i></a>
+            <div class='social-icons text-center'>
+              <a href='#'> <i class='fa fa-facebook'></i></a>
+              <a href='#'> <i class='fa fa-twitter'></i></a>
+              <a href='#'> <i class='fa fa-instagram'></i></a>
+            </div>
           </div>
-        </div>
-      </div>
-    </div>
+
+      <!--- UPCOMING BOX ------------------------------------------------------>
+          <div class='upcoming col-sm-6'>
+            <img scr='images/box-header.png'>
+            <h2 class='text-center'>UP NEXT</h2>
+            <h3 class='text-center'>Coachella</h3>
+            <p class='text-center'>After having to cancel lasy year because of her pregnancy, Beyoncé
+            will headline Coachella this year on the 14th and 21st of April.</p>
+            <p>text text text text</p>
+          </div>
+
+
+
+      <!--- NEWS BOX ---------------------------------------------------------->
+      <div class='container'></div>
+
+
+
+      <!--- PLAYLIST BOX ------------------------------------------------------>
+      <div class='container'></div>
+
+
+
   </body>
 </html>
