--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
-          <ul class='nav navbar-nav navbar-right'>
+        <div class='collapse navbar-collapse'>
+          <ul class='nav navbar-nav'>
 
             <!-- Beyoncé dropdown -->
             <li class='dropdown'>
