--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
           data-toggle='collapse' data-target='#bs-example-navbar-collapse-1'
           aria-expanded='false'>
             <span class='sr-only'>Toggle navigation</span>
+
             <span class='icon-bar'></span>
             <span class='icon-bar'></span>
             <span class='icon-bar'></span>
+
+            <div class='menu-label'>Menu</div>
           </button>
           <a class='navbar-brand' href='#'>
             <img alt='BeyHive' style='max-height: 50px;' src='images/bey-hive-small2.png'>
@@ -102,7 +105,7 @@
 
             <!-- Watch dropdown -->
             <li class='dropdown'>
-              <a href='#' class='dropdown-toggle data-toggle='dropdown'
+              <a href='#' class='dropdown-toggle' data-toggle='dropdown'
               role='button' aria-haspopup='true'
               aria-expanded='false'>WATCH</a>
               <ul class='dropdown-menu'>
