--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- HEADER -->
   <head>
-    <title>Bey+Hive</title>
+    <title>BeyHive</title>
     <!-- add Bootstrap -->
     <link href='css/bootstrap.min.css' rel='stylesheet'>
     <!-- add CSS file -->
@@ -50,7 +50,7 @@
           aria-expanded='false'>
             <span class='sr-only'>Toggle navigation</span>
 
-            <span class='icon-bar'></span>
+            <<span class='icon-bar'></span>
             <span class='icon-bar'></span>
             <span class='icon-bar'></span>
 
@@ -128,27 +128,30 @@
             <button type='submit' class='btn btn-default'>Submit</button>
           </form> -->
 
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-
-<div class="header"></div>
-
-      <div class='container'>
-        <div class='row'>
-          <!--- INTRO BOX ----------------------------------------------------->
-          <div class='intro col-sm-6'>
-            <h2 class='text-center'>WELCOME</h2>
-            <p class='text-center'>Here you can learn more about the First Lady of Music,
-              Beyoncé Knowles-Carter, as well as browse through BeyHive favourites
-              and connect with fellow stans! You can find us on multiple social platforms.</p>
-
-            <div class='social-icons text-center'>
+          <form class='navbar-form navbar-right'>
+            <div class='social-icons'>
               <a href='#'> <i class='fa fa-facebook'></i></a>
               <a href='#'> <i class='fa fa-twitter'></i></a>
               <a href='#'> <i class='fa fa-instagram'></i></a>
             </div>
-          </div>
+          </form>
+
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+    <div class="header"></div>
+
+    <div class='container-fluid'>
+          <!--- INTRO BOX ----------------------------------------------------->
+      <h2 class='text-center'>WELCOME</h2>
+
+      <div class='intro col-sm-6'>
+        <p class='text-center'>Here you can learn more about the First Lady of Music,
+          Beyoncé Knowles-Carter, as well as browse through BeyHive favourites
+          and connect with fellow stans! You can find us on multiple social platforms.</p>
+      </div>
+    </div>
 
       <!--- UPCOMING BOX ------------------------------------------------------>
           <div class='upcoming col-sm-6'>
