--- a/testing.html
+++ b/testing.html
@@ -1,3 +1,48 @@
+<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <i class="fa fa-play-circle"></i> <span class="light">Resturant Guide</span> Exeter
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="navbar-collapse navbar-right navbar-main-collapse collapse" aria-expanded="false" style="height: 0px;">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden active">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#vegetarian">Vegetarian/Vegan</a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#gluten">Gluten Free</a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#groups">Large Groups</a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#reviews">Reviews</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+
+
+
+
+
+
 <div class="layout_header-perspective gpu-cache" style="">
   <header class="layout_header">
     <div class="header-inner max-w-wide gutter">
